--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ data/
 models/
 results/
 
-Rec-Sys-Challenge-Github-Repo/.neptune/*
-Rec-Sys-Challenge-Github-Repo/training_pipeline/.ipynb_checkpoints
+src/.neptune/*
+src/training_pipeline/.ipynb_checkpoints
 scores/.ipynb_checkpoints
 **/.ipynb_checkpoints/
